# kaleidoscope

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  main.h
src/ast/: ast.cpp  ast.h
src/lexer/: lexer.cpp  lexer.h
src/parser/: parser.cpp  parser.h
